# filtered-ie23

./: .gitignore  LICENSE  README.md  install_env.sh  pyproject.toml  test_order.py
config/: filtered-ie23-env.yaml
etc/: gen_order_tables.py  gen_sol_plots.py
filtered_ie23_pkg/: __init__.py
filtered_ie23_pkg/methods/: ie_pre_post_3.py
filtered_ie23_py/: __init__.py
filtered_ie23_py/ODEs/: __init__.py  quasi_periodic_ode.py  sharp_transition_ode1.py  test_ode.py  test_ode_analog.py  vanderpol_ode.py
filtered_ie23_py/methods/: __init__.py  bdf2.py  bdf3.py  filtered_ie23.py  ie_pre_post_3.py
filtered_ie23_py/numerical_tests/: run_filtered_ie23.py  run_quasi_periodic.py  run_test_ode.py  run_test_ode_analog.py  run_vanderpol.py  test1_adapt.py  vanderpol_filtered_ie23_vs_rk45.py
methods/: ie_pre_post_3.py
test/: test_format.py
