[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Stephen McGovern", email = "svenmcgov@protonmail.com"}
]
name = "filtered_ie23_py"
version = "1.0"
description = "Python code base for publication #####."

[tool.setuptools]
packages = ["filtered_ie23_py", "filtered_ie23_py.methods", "filtered_ie23_py.ODEs"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
markers = [
  "unit",
  "integration",
]